<!-- activity_edit_contact.xml -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_contact"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:autofillHints="Name"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:autofillHints="phone"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:backgroundTint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>



    <!-- Email TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:backgroundTint="@color/white"
            android:autofillHints="emailAddress"
        />

    </com.google.android.material.textfield.TextInputLayout>
    <!-- Company TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_company"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/editTextCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:backgroundTint="@color/white"
            android:autofillHints="company"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/buttonSaveContact"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/save_contact"
        android:textSize="20sp"
        android:textColor="@color/white"
       />

    <Button
        android:id="@+id/buttonDeleteContact"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_contact"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="8dp" />

</LinearLayout>
