<!-- activity_main.xml -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#F5F5F5">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_contact"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTitle"
        android:hint="@string/hint_name"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/editTextName"
            android:autofillHints="Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="#000000" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPhone"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone"
        android:layout_below="@id/textInputLayoutName"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/editTextPhone"
            android:autofillHints="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColor="#000000" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:layout_below="@id/textInputLayoutPhone"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/editTextEmail"
            android:autofillHints="email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="#000000" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Company TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCompany"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="Company"
        android:layout_below="@id/textInputLayoutEmail"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/editTextCompany"
            android:autofillHints="company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#000000" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAddContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contact"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textInputLayoutCompany"
        android:layout_marginTop="16dp" />

    <ListView
        android:id="@+id/listViewContacts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:layout_below="@id/buttonAddContact"
        android:layout_marginTop="16dp" />

</RelativeLayout>
